Fixes & improvements to services, training pages layout and spacing of side content. Added pagination at top of search page.

--- a/src/styles/institute.scss
+++ b/src/styles/institute.scss
@@ -50,9 +50,9 @@ $spacing: 20px;
       }
       .main-content {
         @include media('>=desktop') {
-          width: calc(75% - 20px);
+          width: calc(75% - 40px);
           // padding-left: 20px;
-          padding-right: 20px;
+          padding-right: 40px;
         }
         .title {
           font-size: 30px;
@@ -122,10 +122,13 @@ $spacing: 20px;
           }
           h2,
           h3 {
-            margin-top: 40px;
+            // margin-top: 40px;
           }
           h3 {
             text-transform: uppercase;
+          }
+          p {
+            clear: both;
           }
           ul {
             margin-left: 1em;
@@ -219,6 +222,9 @@ $spacing: 20px;
           width: calc(25% - 21px);
           > div {
             width: 100%;
+            p:last-of-type {
+              margin-bottom: 0;
+            }
           }
         }
         .institute-logo {
@@ -266,7 +272,7 @@ $spacing: 20px;
             padding-right: 20px;
           }
           @include media('>=desktop') {
-            border-left: 1px solid $blue;
+            border-left: 1px solid $chocolate;
             padding-right: 0;
             padding-left: 20px;
           }
@@ -362,7 +368,7 @@ $spacing: 20px;
     }
 
     hr.divider {
-      background-color: $blue;
+      background-color: $chocolate;
       height: 2px;
       margin-left: 10px;
       margin-right: 10px;
